--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -11,14 +11,14 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 {{ cookiecutter.project_slug }} tests
+commands = flake8 scr/{{ cookiecutter.project_slug }} tests
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 {% if cookiecutter.use_pytest == 'y' -%}
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements-dev.txt
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
