--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -7,7 +7,11 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
+[bumpversion:file:docs/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
+
+[bumpversion:file: src/{{ cookiecutter.project_slug }}/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
@@ -16,6 +20,7 @@ universal = 1
 
 [flake8]
 exclude = docs
+max-line-length = 180
 
 [aliases]
 # Define setup.py command aliases here
@@ -26,3 +31,5 @@ test = pytest
 collect_ignore = ['setup.py']
 {%- endif %}
 
+[pydocstyle]
+convention = numpy
